[gradle] Detect multiple source modules dependencies in one jar IDEA-321592
GitOrigin-RevId: d25d5e6c4ae2b79f733fc7af4d28d0dd96f271c7